--- a/gb/25/1/19/n14416866.md
+++ b/gb/25/1/19/n14416866.md
@@ -1,11 +1,11 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
 <table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
 <tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
-<tr><td VALIGN=TOP width="626"><h2 align=center>【更新】川普就职 阐述未来4年愿景</h2>
-<img width="600" src="https://i.epochtimes.com/assets/uploads/2025/01/id14418229-AFP__20250120__36UW6R8__v1__Preview__UsPoliticsTrumpInauguration-600x400.jpg" />///image2=```diff
-- 2025年1月20日，美国华盛顿特区，美国国会大厦圆形大厅，美国总统唐纳德·川普（特朗普，Donald Trump）宣誓就任美国第47任总统后，发表了他的就职演说。这是他第二个非连任任期。（Photo by Chip Somodevilla / POOL / AFP）
+<tr><td VALIGN=TOP width="626"><h2 align=center>【更新】川普抵达第一资本体育馆</h2>
+<img width="600" src="https://i.epochtimes.com/assets/uploads/2025/01/id14418335-AFP__20250120__2194969174__v1__Preview__TheInaugurationOfDonaldJTrumpAsThe47thPresid-600x400.jpg" />///image2=```diff
+- 2025年1月20日，美国总统唐纳德·川普（特朗普）与副总统J.D. 万斯（左）和第一夫人梅拉尼娅（右）抵达华盛顿特区首都第一资本体育馆参加室内就职游行。Christopher Furlong / GETTY IMAGES NORTH AMERICA / Getty Images via AFP)
 ```
-<h6>2025年1月20日，美国华盛顿特区，美国国会大厦圆形大厅，美国总统唐纳德·川普（特朗普，Donald Trump）宣誓就任美国第47任总统后，发表了他的就职演说。这是他第二个非连任任期。（Photo by Chip Somodevilla / POOL / AFP）
+<h6>2025年1月20日，美国总统唐纳德·川普（特朗普）与副总统J.D. 万斯（左）和第一夫人梅拉尼娅（右）抵达华盛顿特区首都第一资本体育馆参加室内就职游行。Christopher Furlong / GETTY IMAGES NORTH AMERICA / Getty Images via AFP)
 </h6>
 <hr>
 	<p>【大纪元2025年01月19日讯】（大纪元记者李言、张婷、林燕综合报导）第47任美国总统唐纳德?川普（特朗普）于周一（1月20日）举行就职典礼。川普在就职演说中阐述了未来4年的愿景，并强调说，他将“成为所有美国人民的总统”。</p>
@@ -14,8 +14,17 @@
 <p>川普誓言推动具变革性的“美国优先”政策，他的施政方向将牵动全球政治和经济格局。周一的重点集中在总统就职演讲，以及上任首日签署的行政令上。</p>
 <p>周日（1月19日），川普表示，作为总统，他将在本周末首次出访，前往加州视察洛杉矶山火灾造成的损失。</p>
 <p>“我想向所有受加州山火影响的人表达我们的关怀。”川普说，“我将于周五去那里看一看，让它恢复正常。”</p>
-<p><a title="川普总统就职典礼 英文新唐人特别直播 （即时翻译字幕）LIVE #川普就职舞会 #新唐人电视台 1/20/2025" width="640" b="480" src=""></a><a href="https://d11leod1im7q2u.cloudfront.net/L2fxKD4Jv"><img width="600" src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youtube.com/embed/WQPM5zvSbFM?feature=oembed" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></a></p>
+<p><a title="川普总统就职典礼 英文新唐人特别直播 （即时翻译字幕）LIVE #川普就职舞会 #新唐人电视台 1/20/2025" width="640" b="480" src=""></a><a href="https://d35iuueyr80mg8.cloudfront.net/R3yxKD4Jr"><img width="600" src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youtube.com/embed/WQPM5zvSbFM?feature=oembed" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></a></p>
 <h2>以下是川普就职典礼的更新：</h2>
+<h2>就职游行活动开始</h2>
+<p>美东时间下午5:35，川普进入第一资本体育馆（Capital One Arena）。</p>
+<p>因天气原因，总统就职仪式中的“游行”（Parade）环节改为在第一资本体育馆室内进行。</p>
+<p>游行最前面的是宾夕法尼亚州巴特勒县的急救人员，这里是川普竞选期间第一次遭到暗杀的地点。同时，全场为巴特勒县居民、前消防员科里·康佩拉托雷默哀一分钟。康佩拉托雷是当天在集会现场为保护家人免遭枪击而牺牲的。</p>
+<p>随后出场的是万斯家乡俄亥俄州Middletown High School的乐队和拉拉队。</p>
+<h2>川普的首批内阁提名人有望今天公布结果</h2>
+<p>川普的首批内阁提名人选将于今天晚些在参议院进行表决。</p>
+<p>参议员马可·卢比奥（Marc Rubio）的国务卿提名已获得外交关系委员会批准。此外，参议院情报委员会还推进了约翰·拉特克利夫（John Ratcliffe）领导中央情报局的提名，这两位都有望成为政府中首批高级官员。</p>
+<p>还有参议院军事委员会以14对13通过了对国防部长提名人皮特·海格塞斯（Pete Hegseth）的提名。</p>
 <h2>总统就职时需要手放在圣经上吗</h2>
 <p>目前一些川普宣誓就职的图片在网上热传，显示总统的手并未放在圣经上。</p>
 <p>大多数总统在宣誓时会将手放在圣经上，但这只是传统，并非宣誓的必要条件。</p>
@@ -273,14 +282,13 @@
 <p>四年前总统拜登在就职首日创下签署17个行政令的纪录，而川普很可能会打破这一纪录，创造新高。</p>
 <p>责任编辑：林妍#</p>
 	
-
 <strong>相关新闻：</strong>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/15/n14414310.md#1">川普就职典礼在即 七大要点一文看懂</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/20/n14418273.md#1">川普就职后 巴拿马审计运河的中国港口运营商</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/20/n14418294.md#1">贸易、关税、能源市场对川普就职演说的反应</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/20/n14418097.md#1">【名家专栏】川普2.0强势登台 中共如何应对</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank">中共迫害良心律师</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/17/12/21/n9981424.md#1" target="_blank">林辉：中共治下红楼泪 谁解其中味？</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/8/29/n11486472.md#1" target="_blank">听音乐喜得大法 以色列学员伦敦街头讲真相</a></li><hr>
+<li><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank">下载免费翻墙软件</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/3/20/n11125994.md#1" target="_blank">谁是中华文化的最大破坏者？</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/16/11/20/n8510885.md#1" target="_blank">哈尔滨一位大学教师17年的坚持</a></li><hr>
 <strong>热门新闻：</strong>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/3/n14405103.md#1">稀奇古怪的转生故事二则：人未死魂已转生猪 死后变猪又回到人身</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/16/n14414547.md#1">前美军特种兵曝曾在地下设施见过外星科技</a></li>
@@ -303,5 +311,5 @@
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/18/n14416095.md#1">【车评】拥有STI灵魂的跑车 2025 Subaru WRX tS</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/14/n14412910.md#1">高血压患者的急救、养生、茶饮及运动</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/15/n14414131.md#1">如何找到冬季的隐藏之光 保持健康</a></li>
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/25/1/19/n14416866.htm">【更新】川普就职 阐述未来4年愿景</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/25/1/19/n14416866.htm">【更新】川普抵达第一资本体育馆</a></p><hr>
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/25/1/19/n14416866.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
